# RemarkableRiddle

./: .env.example  .gitignore  Cargo.toml  README.md  deploy.sh  riddle.toml
prompts/: diary.txt
src/: capture.rs  config.rs  device.rs  engine.rs  events.rs  geom.rs  main.rs  pen.rs  render.rs  script.rs  touch.rs  xochitl.rs
