[package]
name = "riddle"
version = "0.1.0"
edition = "2021"
description = "A Chamber of Secrets diary for the reMarkable 2: handwriting sinks into the page, an answer writes itself back."

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
base64 = "0.22"
ureq = { version = "2", features = ["json"] }
tiny-skia = "0.11"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = "thin"
strip = true
opt-level = "s"
